test/tests/compiler/18_structures/invalid_types/scalar_required/struct_as_int.plx
type struc s(    a: i32    )

pub fn main(none) i32 {
    x: struc s = $(true)
    #  can only apply ~ operator to ints, not structs
    cast<none>(~x)
    return 0
}
